[gd_scene load_steps=12 format=3 uid="uid://dmjypnm10cjlu"]

[ext_resource type="Texture2D" uid="uid://bixsuatw2nvos" path="res://sprites/background/céu azul.png" id="1_l48gv"]
[ext_resource type="Texture2D" uid="uid://cmqs7ab6fe5vl" path="res://sprites/background/céu.png" id="2_ecwwl"]
[ext_resource type="Texture2D" uid="uid://bt4hca8xttx04" path="res://sprites/background/cidade.png" id="3_kk3ma"]
[ext_resource type="Texture2D" uid="uid://bi6684qejy888" path="res://sprites/background/grama.png" id="4_nrnbx"]
[ext_resource type="Texture2D" uid="uid://cajxuqhd022g3" path="res://sprites/ground.png" id="5_iqepy"]
[ext_resource type="Texture2D" uid="uid://bha17rji4u4xs" path="res://sprites/label_flappy_bird.png" id="6_h1wq0"]
[ext_resource type="Script" uid="uid://06iaiau60aly" path="res://ui.gd" id="6_nrnbx"]
[ext_resource type="Texture2D" uid="uid://ctf54fjjxmc27" path="res://sprites/button_play_normal.png" id="7_kk3ma"]
[ext_resource type="Texture2D" uid="uid://bhksbon8l4cc" path="res://sprites/button_score_normal.png" id="8_nrnbx"]
[ext_resource type="Texture2D" uid="uid://li2byn7dfxms" path="res://sprites/button_play_pressed.png" id="9_h1wq0"]
[ext_resource type="Texture2D" uid="uid://pd00ec8yi6vp" path="res://sprites/button_score_pressed.png" id="11_dwrpx"]

[node name="Menu" type="Node2D"]

[node name="BackGround" type="Node2D" parent="."]
position = Vector2(96, 0)

[node name="CéuAzul" type="Sprite2D" parent="BackGround"]
position = Vector2(-96, 0)
texture = ExtResource("1_l48gv")

[node name="Parallax2D" type="Parallax2D" parent="BackGround"]
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-10, 0)
repeat_times = 2
ignore_camera_scroll = true

[node name="Céu" type="Sprite2D" parent="BackGround/Parallax2D"]
texture = ExtResource("2_ecwwl")

[node name="Parallax2D2" type="Parallax2D" parent="BackGround"]
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-15, 0)
repeat_times = 2

[node name="cidade" type="Sprite2D" parent="BackGround/Parallax2D2"]
texture = ExtResource("3_kk3ma")

[node name="Parallax2D3" type="Parallax2D" parent="BackGround"]
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-20, 0)
repeat_times = 2

[node name="grama" type="Sprite2D" parent="BackGround/Parallax2D3"]
texture = ExtResource("4_nrnbx")

[node name="Parallax2D4" type="Parallax2D" parent="BackGround"]
scroll_offset = Vector2(0, -40.5)
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-100, 0)
repeat_times = 2

[node name="Ground" type="Sprite2D" parent="BackGround/Parallax2D4"]
z_index = 10
position = Vector2(0, 143)
texture = ExtResource("5_iqepy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_nrnbx")

[node name="TextureRect" type="TextureRect" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -104.0
offset_right = 45.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_h1wq0")

[node name="CenterContainer" type="CenterContainer" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.664063
anchor_right = 1.0
anchor_bottom = 0.777344
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/UI/CenterContainer"]
layout_mode = 2

[node name="Start" type="TextureButton" parent="Canvas/UI/CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_kk3ma")
texture_pressed = ExtResource("9_h1wq0")

[node name="HighScores" type="TextureButton" parent="Canvas/UI/CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_nrnbx")
texture_pressed = ExtResource("11_dwrpx")

[connection signal="button_up" from="Canvas/UI/CenterContainer/HBoxContainer/Start" to="Canvas/UI" method="_on_start_button_up"]
[connection signal="button_up" from="Canvas/UI/CenterContainer/HBoxContainer/HighScores" to="Canvas/UI" method="_on_high_scores_button_up"]
